--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -5,6 +5,10 @@
     overflow: hidden;
     margin: 10px;
 
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    min-width: 300px;
 }
 
 .Card .Title {
@@ -14,6 +18,7 @@
 }
 
 .Card .Content{
+    flex: 1;
     background-color: #fff;
     color: #000;
     padding: 10px;
